[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Slots.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Slots" type="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -235.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -233.0
margin_right = -50.0
margin_bottom = -25.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 924.0
margin_bottom = 208.0
custom_constants/separation = 20

[node name="Slot1" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_right = 137.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot2" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 294.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot3" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 451.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot4" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_left = 471.0
margin_right = 609.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot5" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_left = 629.0
margin_right = 766.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot6" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_left = 786.0
margin_right = 924.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 51.0
margin_top = 6.0

[node name="CardHolder" type="HBoxContainer" parent="MarginContainer2"]
custom_constants/separation = 28
